--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon --env-file=.env -q dist/index.js\" ",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon --env-file=.env.development -q dist/index.js\" ",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
